--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,19 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+ion-header {
+	border-bottom-left-radius: 50px;
+	border-bottom-right-radius: 50px;
+	overflow: hidden;
+    height: 150px; 
+    background-color: rgba(87, 87, 87, 0.986);
+}
+
+ion-toolbar {
+  height: 150px !important;
+}
+
+ion-menu-button {
+  color: #fff !important;
+}
