--- a/src/global.scss
+++ b/src/global.scss
@@ -40,7 +40,7 @@ ion-header {
 	border-bottom-left-radius: 50px;
 	border-bottom-right-radius: 50px;
 	overflow: hidden;
-    height: 150px; 
+    height: 200px; 
     background-color: rgba(87, 87, 87, 0.986);
 }
 
@@ -50,4 +50,53 @@ ion-toolbar {
 
 ion-menu-button {
   color: #fff !important;
+}
+
+ion-content {
+    height: 200px;
+}
+
+swiper-container {
+  width: 100%;
+  height: 130px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide-card {
+  position: relative;
+  width: 90%;
+  height: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+  background-size: cover;
+  background-position: center;
+}
+
+.slide-card::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.slide-info {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white;
+  z-index: 1;
+}
+
+.label {
+  background-color: orange;
+  padding: 2px 6px;
+  font-size: 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
 }
