--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding" [scrollY]="false" style="height: 250px;">
-  <p>CONTEÚDOS</p>
+  <p class="title">CONTEÚDOS</p>
    <!-- <ion-title size="minimal">Personal online</ion-title> -->
   <swiper-container
     slides-per-view="1.5"
@@ -10,7 +10,7 @@
       <div class="slide-card" style="background-image: url('assets/icon/ganhar-massa.jpg');">
         <div class="slide-info">
           <!-- <span class="label">Novo treino</span> -->
-          <h3>Como ganhar massa muscular</h3>
+          <h3>Como obter hipertrofia muscular</h3>
         </div>
       </div>
     </swiper-slide>
