--- a/src/app/components/personal-online/personal-online.component.html
+++ b/src/app/components/personal-online/personal-online.component.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding" [scrollY]="false">
-  <p>PERSONAL ONLINE <ion-icon name="add-circle-outline"></ion-icon></p>
+  <p class="title">PERSONAL ONLINE <ion-icon name="add-circle-outline"></ion-icon></p>
    <!-- <ion-title size="minimal">Personal online</ion-title> -->
   <swiper-container 
     slides-per-view="1.5"
