--- a/src/app/components/programs/programs.component.html
+++ b/src/app/components/programs/programs.component.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding" [scrollY]="false" style="height: 250px;">
-  <p>PROGRAMAS <span class="label">Novo</span></p>
+  <p class="title">PROGRAMAS <span class="label">Novo</span></p>
    <!-- <ion-title size="minimal">Personal online</ion-title> -->
   <swiper-container
     slides-per-view="1.5"
