--- a/src/global.scss
+++ b/src/global.scss
@@ -35,6 +35,15 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+:root {
+  --ion-font-family: 'Roboto', sans-serif;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
 ion-header {
 	border-bottom-left-radius: 50px;
@@ -45,7 +54,7 @@ ion-header {
 }
 
 ion-toolbar {
-  height: 150px !important;
+  height: 200px !important;
 }
 
 ion-menu-button {
@@ -99,4 +108,8 @@ swiper-container {
   font-size: 10px;
   border-radius: 5px;
   text-transform: uppercase;
+}
+
+.title {
+    font-weight: bold;
 }
