feat: Remove coments - Configure icons in app.component - Create README

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,12 +6,12 @@
           <ion-menu-button></ion-menu-button>
         </ion-col>
         <ion-col size="8" class="ion-text-center">
-          <img src="assets/icon/logo.png" style="height: 40px;" />
+          <img src="assets/icon/logo.png" id="icon-logo" />
         </ion-col>
         <ion-col size="2" class="ion-text-right">
           <div class="icon-badge-container">
-            <img src="assets/icon/notification.png" alt="Notificação" />
-            <ion-badge color="danger" class="icon-badge">2</ion-badge>
+            <img src="assets/icon/notification.png" id="icon-notification" alt="Notificação" />
+            <ion-badge color="primary" class="icon-badge">2</ion-badge>
           </div>
         </ion-col>
       </ion-row>
@@ -19,7 +19,7 @@
       <ion-row class="ion-align-items-center">
         <ion-col size="auto">
           <ion-avatar style="width: 50px; height: 50px;">
-            <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="Avatar" />
+            <img src="assets/icon/avatar.jpg" alt="Avatar" />
           </ion-avatar>
         </ion-col>
         <ion-col>
