--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,11 +6,11 @@
           <ion-menu-button></ion-menu-button>
         </ion-col>
         <ion-col size="8" class="ion-text-center">
-          <img src="assets/icon/logo.png" id="icon-logo" />
+          <img src="assets/icon/logo.png" class="icon-logo" />
         </ion-col>
         <ion-col size="2" class="ion-text-right">
           <div class="icon-badge-container">
-            <img src="assets/icon/notification.png" id="icon-notification" alt="Notificação" />
+            <img src="assets/icon/notification.png" class="icon-notification" alt="Notificação" />
             <ion-badge color="primary" class="icon-badge">2</ion-badge>
           </div>
         </ion-col>
@@ -18,7 +18,7 @@
 
       <ion-row class="ion-align-items-center">
         <ion-col size="auto">
-          <ion-avatar style="width: 50px; height: 50px;">
+          <ion-avatar>
             <img src="assets/icon/avatar.jpg" alt="Avatar" />
           </ion-avatar>
         </ion-col>
@@ -33,11 +33,11 @@
       <ion-row>
         <ion-col>
           <div class="action-buttons">
-            <ion-button fill="clear" class="action-btn" style="border-radius: 40px; background-color: #000000;">
+            <ion-button fill="clear" class="action-btn">
               <ion-icon name="body-outline" slot="start"></ion-icon>
               MEU CORPO
             </ion-button>
-            <ion-button fill="clear" class="action-btn" style="border-radius: 40px; background-color: #000000;">
+            <ion-button fill="clear" class="action-btn">
               <ion-icon name="trophy-outline"></ion-icon>
               OBJETIVOS E CONQUISTAS
             </ion-button>
