--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -28,19 +28,19 @@ ion-item {
     background-color: rgba(87, 87, 87, 0.986);
 }
 
-// Avatar circular fix
-ion-avatar {
-  width: 50px !important;
-  height: 50px !important;
-  min-width: 50px !important;
-  min-height: 50px !important;
-  
-  img {
-    width: 50px !important;
-    height: 50px !important;
-    object-fit: cover !important;
-    border-radius: 50% !important;
-  }
+ion-button {
+  border-radius: 40px; 
+  background-color: #000000;
+}
+
+.icon-notification {
+  width: 40px;
+  height: 30px;
+}
+
+.icon-logo {
+  width: 48px;
+  height: 35px;
 }
 
 // User Profile Section
