--- a/src/app/components/personal-online/personal-online.component.html
+++ b/src/app/components/personal-online/personal-online.component.html
@@ -6,7 +6,7 @@
     free-mode="true"
   >
     <swiper-slide>
-      <div class="slide-card" style="background-image: url('assets/icon/treino.jpg')">
+      <div class="slide-card training">
         <div class="slide-info">
           <h3><ion-icon id="new-training" name="add-circle-outline"></ion-icon>Novo Treino</h3>
         </div>
@@ -14,7 +14,7 @@
     </swiper-slide>
 
      <swiper-slide>
-      <div class="slide-card" style="background-image: url('assets/icon/yoga.jpg');">
+      <div class="slide-card yoga">
         <div class="slide-info">
           <h3>YOGA Experience</h3>
         </div>
