--- a/src/app/components/programs/programs.component.html
+++ b/src/app/components/programs/programs.component.html
@@ -1,4 +1,4 @@
-<ion-content class="ion-padding" [scrollY]="false" style="height: 250px;">
+<ion-content class="ion-padding" [scrollY]="false">
   <p class="title">PROGRAMAS <span class="label">Novo</span></p>
   <swiper-container
     slides-per-view="1.5"
@@ -6,7 +6,7 @@
     free-mode="true"
   >
     <swiper-slide>
-      <div class="slide-card" style="background-image: url('assets/icon/levantamento-peso.jpg')">
+      <div class="slide-card weightlifting">
         <div class="slide-info">
           <span class="label">Continuar treino</span>
           <h3>LEVANTAMENTO DE PESO</h3>
@@ -15,7 +15,7 @@
     </swiper-slide>
 
      <swiper-slide>
-      <div class="slide-card" style="background-image: url('assets/icon/yoga.jpg');">
+      <div class="slide-card yoga">
         <div class="slide-info">
           <h3>YOGA Experience</h3>
         </div>
